--- a/images/chieu-dieu-hoa-khong-goi-12/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-12.html
 lastopen = 2024-06-09 23:15:39
 
 [search]
-lastsearch = 2024-07-29 10:44:49
+lastsearch = 2024-07-29 16:34:25
 
 [demxanh.com]
 match = 14.8%%
@@ -17,14 +17,14 @@ title = chiếu điều hoà giá tốt Tháng 7, 2024 | Mua ngay
 url = https://shopee.vn/search?keyword=chiếu điều hoà
 
 [goni.vn]
-match = 18.5%%
-title = Chiếu Điều Hòa Goni - Ưu Đãi Tháng 07/2024
-url = https://goni.vn/chieu-dieu-hoa-goni/
+match = -33.3%%
+title = Chiếu điều hòa là gì? Có nên sử dụng chiếu điều hòa không
+url = https://goni.vn/chieu-dieu-hoa-la-gi-co-nen-su-dung-chieu-dieu-hoa-khong/
 
 [russo.vn]
-match = -37.0%%
-title = Chiếu điều hòa cao su non chính hãng đẹp nhất 2024 - Russo
-url = https://russo.vn/chieu-dieu-hoa-cao-su-non/
+match = 29.6%%
+title = Chiếu điều hòa cao su non 1m8x2m - Russo
+url = https://russo.vn/chieu-dieu-hoa-cao-su-1m8x2m/
 
 [www.dienmayxanh.com]
 match = -48.1%%
@@ -37,9 +37,9 @@ title = Chiếu điều hòa là gì? Nằm chiếu điều hòa có mát không
 url = https://congtynemthangloi.com/chieu-dieu-hoa-la-gi-nam-chieu-dieu-hoa-co-mat-khong
 
 [suongtuyet.com]
-match = -29.6%%
-title = Có Mấy Loại Chiếu Điều Hòa? Chiếu Điều Hòa Loại Nào ...
-url = https://suongtuyet.com/nen-su-dung-chieu-dieu-hoa-loai-nao-chieu-dieu-hoa-loai-nao-tot.html
+match = 18.5%%
+title = có nên sử dụng chiếu điều hòa không?
+url = https://suongtuyet.com/chieu-dieu-hoa-co-nen-su-dung-chieu-dieu-hoa-khong.html
 
 [tiki.vn]
 match = 33.3%%
@@ -52,9 +52,9 @@ title = Chiếu Điều Hòa Sợi Mây Tổng Hợp Cao Cấp ... - Babies.vn
 url = https://babies.vn/chieu-dieu-hoa-soi-may-tong-hop-cao-cap-chieu-dieu-hoa-thong-minh-thoang-khi-mat-ruoi-cho-mua-he
 
 [betiti.com]
-match = 68.2%%
-title = Chiếu điều hòa kèm gối
-url = https://betiti.com/san-pham/chieu-dieu-hoa-kem-goi/
+match = -29.6%%
+title = Chiếu Điều Hòa - Betiti - Chuyên Đồ Sơ Sinh, Trọn Bộ ...
+url = https://betiti.com/san-pham/chieu-dieu-hoa/
 
 [nemsaithanh.com]
 match = 46.2%%
@@ -82,9 +82,9 @@ title = 10+ mẫu chiếu điều hoà hot nhất năm
 url = https://thegioinem.com/top-chieu-dieu-hoa-hot-nhat-nam.html
 
 [dienlanhdonganh.com]
-match = -74.1%%
-title = Điều hòa Panasonic 1 chiều 12000Btu CU/CS-N12WKH-8 (ga ...
-url = https://dienlanhdonganh.com/dieu-hoa-panasonic-1-chieu-12000btu-cu-cs-n12wkh-8-ga-32
+match = -66.7%%
+title = Điều hòa SkyAir loại tủ đứng Daikin FVA71AMVM/RZF71CYM ...
+url = https://dienlanhdonganh.com/dieu-hoa-skyair-loai-tu-dung-daikin-fva71amvm-rzf71cym-1-chieu-inverter-dieu-khien-xa
 
 [ru9.vn]
 match = -18.5%%
