--- a/images/chieu-gap-thai-binh-3m/config.ini
+++ b/images/chieu-gap-thai-binh-3m/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-gap-thai-binh-3m.html
 lastopen = 2024-06-09 22:36:42
 
 [search]
-lastsearch = 2024-07-29 12:57:06
+lastsearch = 2024-07-29 16:42:16
 
 [shopee.vn]
-match = -77.3%%
-title = 3m -2m gấp gọn chống thấm nước hàng đẹp ngồi ăn cỗ
-url = https://shopee.vn/Chiếu-nhựa-dài-4m-3m-2m-gấp-gọn-chống-thấm-nước-hàng-đẹp-ngồi-ăn-cỗ-i.28032344.7417800514
+match = -90.9%%
+title = Chiếu cói 2.2m x 2m chuẩn xịn chiếu cói thái bình chính hiệu
+url = https://shopee.vn/Chiếu-cói-2.2m-x-2m-chuẩn-xịn-chiếu-cói-thái-bình-chính-hiệu-i.18845103.7735992407
 
 [www.facebook.com]
 match = 36.4%%
@@ -22,9 +22,9 @@ title = Xưởng sản xuất chiếu nhựa Thái Bình | Thai Binh
 url = https://m.facebook.com/61553157173242/
 
 [www.lazada.vn]
-match = -86.4%%
-title = Chiếu Nhựa 2mx 3m Giá Tốt T05/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/chieu-nhua-2mx-3m/?page=5&srsltid=AfmBOorGCfq2x69qZwmCKMFFi79_Jk9l42o0NsGYoLJ4kpYiH_LVscrM
+match = -36.4%%
+title = chiếu nhựa gấp gọn Thái Bình tiện dụng 2.0 m x 3.0 m
+url = https://www.lazada.vn/products/chieu-nhua-gap-gon-thai-binh-tien-dung-20-m-x-30-m-i813824278.html
 
 [tiki.vn]
 match = -86.4%%
@@ -97,9 +97,9 @@ title = Chiếu nhựa Gấp 1m8 x 3m - Mai Huyền
 url = https://www.maihuyencorp.com/product-page/chieu-nhua-1m8x3m
 
 [chieu.com.vn]
-match = 50.0%%
-title = Chiếu cói Thái Bình Archives
-url = https://chieu.com.vn/chieu-coi/chieu-coi-thai-binh
+match = -13.6%%
+title = Chiếu cói Thái Bình loại 1 dệt máy 1m6 x 2m
+url = http://chieu.com.vn/san-pham/chieu-coi-thai-binh-kich-co-1m6x2m/
 
 [truc.com.vn]
 match = 0.0%%
@@ -185,4 +185,9 @@ url = https://thaibinh.gov.vn/tin-tuc-su-kien/dieu-kien-tu-nhien/tiem-nang-khoan
 match = -68.2%%
 title = Chiếu Cói Gốcthái Bình,chiếu Nhựa-trúc-mây-điều Hòa ...
 url = https://www.lamchame.com/forum/threads/chieu-coi-gocthai-binh-chieu-nhua-truc-may-dieu-hoa-lam-chieu-coi-theo-k-thuoc-ycau-0912-794-282.2041482/
+
+[demhong.vn]
+match = -77.3%%
+title = Chiếu Tre Việt Phổ Mến Thái Bình Cao Cấp - Chính Hãng ...
+url = https://demhong.vn/chieu-tre-viet-pho-men/
 
