--- a/images/chieu-truc-cong-ty-12-19/config.ini
+++ b/images/chieu-truc-cong-ty-12-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-12-19.html
 lastopen = 2024-06-09 23:41:54
 
 [search]
-lastsearch = 2024-07-29 11:59:23
+lastsearch = 2024-07-29 16:40:33
 
 [chieutrucsaigon.com]
 match = 16.7%%
@@ -27,14 +27,14 @@ title = Chiếu Nằm (Chiếu Tre, Chiếu Trúc, Chiếu Cói,..)
 url = https://trangvangvietnam.com/categories/490435/chieu-nam-(chieu-tre-chieu-truc-chieu-coi,..).html
 
 [www.facebook.com]
-match = 5.3%%
-title = Thế Giới Chiếu Trúc
-url = https://www.facebook.com/thegioichieutruc/
+match = 4.2%%
+title = CHIẾU TRE GIÁ RẺ | Ho Chi Minh City
+url = https://www.facebook.com/chieutregiare/
 
 [shopee.vn]
-match = -37.5%%
-title = (100%% ảnh thật) CHIẾU TRÚC HẠT NÂU, HẠT VÀNG ...
-url = https://shopee.vn/(100-ảnh-thật)-CHIẾU-TRÚC-HẠT-NÂU-HẠT-VÀNG-VIỆT-NAM-NGỌC-LÂM-LOẠI-CAO-CẤP-hàng-dày-mắt-đan-khít--i.11240484.4326979150
+match = 50.0%%
+title = chiếu trúc tăm hương trúc ht
+url = https://shopee.vn/chiếu-trúc-tăm-hương-trúc-ht-i.68883759.14478905056
 
 [www.yellowpages.vn]
 match = -37.5%%
@@ -155,4 +155,9 @@ url = https://dsvn.vn/
 match = -70.8%%
 title = Trang chủ - Đài Phát thanh và Truyền hình Đồng Tháp
 url = https://thdt.vn/
+
+[chanrathanhthuy.com]
+match = 45.8%%
+title = Chiếu Trúc Giá Bao Nhiêu?
+url = https://chanrathanhthuy.com/tin-tuc/chieu-truc-gia-bao-nhieu-1132.html
 
