--- a/images/chieu-truc-que-lam-loai-1-15/config.ini
+++ b/images/chieu-truc-que-lam-loai-1-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-truc-que-lam-loai-1-15.html
 lastopen = 2024-06-07 00:19:57
 
 [search]
-lastsearch = 2024-07-29 14:03:24
+lastsearch = 2024-07-29 16:34:46
 
 [thegioidemviet.vn]
-match = 21.4%%
-title = BẢNG GIÁ Chiếu Trúc Việt Nam mới nhất ...
-url = https://thegioidemviet.vn/chieu-truc/
+match = 35.7%%
+title = Bảng Giá Chiếu Trúc Quế Lâm [Chính hãng
+url = https://thegioidemviet.vn/chieu-truc-que-lam/
 
 [shopee.vn]
 match = -3.6%%
@@ -17,9 +17,9 @@ title = Chiếu trúc Quế Lâm mắt ngọc hạt vàng bóng đẹp loại 1
 url = https://shopee.vn/Chiếu-trúc-Quế-Lâm-mắt-ngọc-hạt-vàng-bóng-đẹp-loại-1-i.121274905.7879754206
 
 [chieutrelanlan.com]
-match = 25.0%%
-title = Chiếu trúc Việt nam - Thương hiệu Lan Lan
-url = https://chieutrelanlan.com/chieu-truc-p17.html
+match = 10.7%%
+title = Chiếu trúc Quế Lâm không viền màu trắng 160x200cm
+url = https://chieutrelanlan.com/chieu-truc-que-lam-khong-vien-mau-trang-160x200cm-72.html
 
 [demxanh.com]
 match = -28.6%%
@@ -107,7 +107,7 @@ title = Chiếu Trúc Quế Lâm - 115183867
 url = https://www.chotot.com/mua-ban-giuong-chan-ga-goi-nem-quan-lien-chieu-da-nang/115183867.htm
 
 [bigomart.vn]
-match = 0.0%%
-title = Chiếu Trúc Hạt Quế Lâm hàng loại 1 tem xanh 1m2, 1m5 ...
-url = https://bigomart.vn/cproduct/sendo/chieu-truc-hat-que-lam-hang-loai-1-tem-xanh-1m2-1m5-1m6-31922253
+match = 10.7%%
+title = Chiếu trúc Quế Lâm loại 1m*1m9 [Được kiểm hàng] ...
+url = https://bigomart.vn/cproduct/sendo/chieu-truc-que-lam-loai-1m-1m9-duo-c-kie-m-ha-ng-31977538-117250614
 
