--- a/images/ga-ni-long-14/config.ini
+++ b/images/ga-ni-long-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-14.html
 lastopen = 2024-06-10 00:50:06
 
 [search]
-lastsearch = 2024-07-29 12:50:18
+lastsearch = 2024-07-29 16:34:01
 
 [www.galottery.com]
 match = -7.7%%
@@ -214,7 +214,7 @@ url = https://blog.redbrand.com/12-5-gauge-barbed-wire-vs-14-gauge-barbed-wire-f
 [books.google.com]
 match = -161.5%%
 title = Crystal Data: Inorganic compounds 1967-1969
-url = https://books.google.com/books?id=QZkhAQAAMAAJ&pg=RA6-SA1-PA120&lpg=RA6-SA1-PA120&dq=ga+ni+long+14&source=bl&ots=o2gxWA5-z1&sig=ACfU3U01UlErWNsFE7ufm-VFKCADNAtdcA&hl=en&sa=X&ved=2ahUKEwj3tNr8xsuHAxUtk4kEHZ1JAuYQ6AF6BAgXEAM
+url = https://books.google.com/books?id=QZkhAQAAMAAJ&pg=RA6-SA1-PA120&lpg=RA6-SA1-PA120&dq=ga+ni+long+14&source=bl&ots=o2gxWB83CX&sig=ACfU3U2B76i3pAQizfWkj98DhTgOS7Xfcg&hl=en&sa=X&ved=2ahUKEwjjwNf9-MuHAxWSElkFHdFjOHgQ6AF6BAgbEAM
 
 [ottawabraves.com]
 match = -292.3%%
