--- a/images/man-tu-bung-tre-em/config.ini
+++ b/images/man-tu-bung-tre-em/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-tre-em.html
 lastopen = 2024-06-07 00:52:30
 
 [search]
-lastsearch = 2024-07-29 15:37:24
+lastsearch = 2024-07-29 16:33:19
 
 [www.mantubung.com]
 match = -100.0%%
@@ -17,9 +17,9 @@ title = Màn chống muỗi cho bé gấp gọn dễ dàng bao quản, mùng ...
 url = https://manbinhminh.com/2509/man-chong-muoi-cho-be-gap-gon-de-dang-bao-quan-mung-chup-tu-bung.aspx
 
 [shopee.vn]
-match = -127.8%%
-title = Màn chụp cho bé - Giá Tốt, Sale Tháng 07, Ship 0 Đồng
-url = https://shopee.vn/list/màn chụp/cho bé
+match = -33.3%%
+title = Màn Mùng chụp tự bung cho em bé sơ sinh
+url = https://shopee.vn/Màn-Mùng-chụp-tự-bung-cho-em-bé-sơ-sinh-Mùng-xếp-gấp-gọn-cho-bé-trẻ-em-bé-lớn-chống-muỗi-tuyệt-đối-i.236260085.7856510622
 
 [h5.lazada.vn]
 match = -33.3%%
@@ -47,9 +47,9 @@ title = Mùng Tự Bung Bảo Lộc 1m8 x 2m Loại 2 Cửa Cao Cấp ...
 url = https://www.mungtubung.com/mung-tu-bung-1m8-loai-2-cua.html
 
 [mungmocmien.com]
-match = -155.6%%
-title = Mùng ngủ cao cấp Mộc Miên ( cung cấp mùng chụp tự bung ...
-url = https://mungmocmien.com/
+match = -111.1%%
+title = Mùng ngủ em bé ( mùng chụp em bé, mùng nôi em bé...)
+url = https://mungmocmien.com/collections/mung-chup-em-be
 
 [tiki.vn]
 match = -11.1%%
