--- a/images/nem-sieu-nhe-9f-12/config.ini
+++ b/images/nem-sieu-nhe-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-12.html
 lastopen = 2024-06-10 01:22:00
 
 [search]
-lastsearch = 2024-07-29 13:23:51
+lastsearch = 2024-07-29 16:41:34
 
 [www.lazada.vn]
 match = -111.1%%
@@ -17,9 +17,9 @@ title = NEM-12
 url = https://www.coastpneumatics.com/product/NEM-12/
 
 [m.facebook.com]
-match = -177.8%%
-title = Thấy thương chị gái bán nem nướng thật thà hỏi gì cũng khai
-url = https://m.facebook.com/amthucduongpho247/videos/thấy-thương-chị-gái-bán-nem-nướng-thật-thà-hỏi-gì-cũng-khai-atdp/629711951714693/
+match = -100.0%%
+title = HỆ THỐNG SIÊU THỊ NỆM HÀNG ĐẦU VIỆT NAM TỔNG ...
+url = https://m.facebook.com/media/set/?vanity=vuanem.vn&set=a.693142637496508
 
 [thegioinem.com]
 match = -55.6%%
@@ -57,8 +57,8 @@ title = NEM Furniture JSC (@nemfurniturejsc)
 url = https://www.instagram.com/nemfurniturejsc/?hl=en
 
 [www.diepxuan.com]
-match = -111.1%%
-title = Điệp Xuân Nệm siêu nhẹ 9F 12 - Chăn ga gối đệm Điệp Xuân
+match = -55.6%%
+title = Nệm siêu nhẹ 9F 12 - Chăn ga gối đệm Điệp Xuân
 url = https://www.diepxuan.com/nem-sieu-nhe-9f-12.html
 
 [nemphuoclong.vn]
