--- a/images/tham-ghe-da-dai/config.ini
+++ b/images/tham-ghe-da-dai/config.ini
@@ -12,9 +12,9 @@ title = thảm trải ghế giá tốt Tháng 7, 2024 | Mua ngay
 url = https://shopee.vn/search?keyword=thảm trải ghế
 
 [ghedagiago.com]
-match = -146.7%%
-title = TOP 45 MẪU GHẾ ĐÁ CÔNG VIÊN GIÁ TỐT TẠI XƯỞNG ...
-url = https://ghedagiago.com/danh-muc/ghe-da-cong-vien/
+match = -133.3%%
+title = 55+ MẪU GIÁ BÀN GHẾ ĐÁ GIẢ GỖ RẺ ĐẸP NHẤT 2024
+url = https://ghedagiago.com/danh-muc/ban-ghe-da-gia-go/
 
 [ghedatruongan.com]
 match = -80.0%%
