--- a/images/chieu-truc-que-lam-loai-1-15/config.ini
+++ b/images/chieu-truc-que-lam-loai-1-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-truc-que-lam-loai-1-15.html
 lastopen = 2024-06-07 00:19:57
 
 [search]
-lastsearch = 2024-07-29 16:34:46
+lastsearch = 2024-07-29 18:48:00
 
 [thegioidemviet.vn]
-match = 35.7%%
-title = Bảng Giá Chiếu Trúc Quế Lâm [Chính hãng
-url = https://thegioidemviet.vn/chieu-truc-que-lam/
+match = 21.4%%
+title = BẢNG GIÁ Chiếu Trúc Việt Nam mới nhất ...
+url = https://thegioidemviet.vn/chieu-truc/
 
 [shopee.vn]
 match = -3.6%%
@@ -17,14 +17,14 @@ title = Chiếu trúc Quế Lâm mắt ngọc hạt vàng bóng đẹp loại 1
 url = https://shopee.vn/Chiếu-trúc-Quế-Lâm-mắt-ngọc-hạt-vàng-bóng-đẹp-loại-1-i.121274905.7879754206
 
 [chieutrelanlan.com]
-match = 10.7%%
-title = Chiếu trúc Quế Lâm không viền màu trắng 160x200cm
-url = https://chieutrelanlan.com/chieu-truc-que-lam-khong-vien-mau-trang-160x200cm-72.html
+match = 25.0%%
+title = Chiếu trúc Việt nam - Thương hiệu Lan Lan
+url = https://chieutrelanlan.com/chieu-truc-p17.html
 
 [demxanh.com]
 match = -28.6%%
 title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
-url = https://demxanh.com/chieu-truc.html
+url = https://demxanh.com/chieu-truc.html?srsltid=AfmBOoqWe45fjciCcyqt7q1m1mzLL9Pz9WOKCgSq6ZSPTOuMS33KTFsJ
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -44,7 +44,7 @@ url = https://www.sendo.vn/chieu-truc-1-6x2m.htm
 [www.lazada.vn]
 match = 3.6%%
 title = Chiếu trúc hạt Quế Lâm loại 1, chiếu điều hoà cao cấp
-url = https://www.lazada.vn/products/chieu-truc-hat-que-lam-loai-1-chieu-dieu-hoa-cao-cap-i1845950408.html
+url = https://www.lazada.vn/products/chieu-truc-hat-que-lam-loai-1-chieu-dieu-hoa-cao-cap-i1845950408.html?srsltid=AfmBOopp7iBC6kdxwRqbnVwPaP7DT61Z31j2L1vBWc8jyWDqCm986OvR
 
 [thegioidemonline.com]
 match = -39.3%%
