--- a/images/tham-ni-xop-hinh-60/config.ini
+++ b/images/tham-ni-xop-hinh-60/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/tham-ni-xop-hinh-60.html
 lastopen = 2024-06-07 00:35:14
 
 [search]
-lastsearch = 2024-07-29 18:31:09
+lastsearch = 2024-07-29 18:44:33
 
 [xoptraisan.info]
-match = 26.3%%
-title = Thảm nỉ ghép Tường Lâm 60×60
-url = https://xoptraisan.info/tham-ni-ghep-tuong-lam-60x60
+match = -147.4%%
+title = Thảm xốp trải sàn 60x60 họa tiết tranh giao thông cao cấp ...
+url = https://xoptraisan.info/tham-xop-tranh-giao-thong-60x60
 
 [thamaulac.com.vn]
-match = -31.6%%
-title = Thảm nỉ ghép 60x60cm trơn màu đỏ, ghi
-url = https://thamaulac.com.vn/san-pham/tham-ni-ghep-60x60cm-tron-do-ghi
+match = -78.9%%
+title = THẢM XỐP ÂU LẠC – Hàng Việt Nam chất lượng cao
+url = https://thamaulac.com.vn/
 
 [thamvinhthuan.com]
 match = 26.3%%
