--- a/images/chieu-lac-d2-16/config.ini
+++ b/images/chieu-lac-d2-16/config.ini
@@ -4,16 +4,16 @@ url = https://www.diepxuan.com/chieu-lac-d2-16.html
 lastopen = 2024-06-06 16:54:08
 
 [search]
-lastsearch = 2024-07-29 17:44:25
+lastsearch = 2024-07-29 19:26:06
 
 [vinatools.com]
-match = -206.7%%
-title = Kéo cắt thép tấm BESSEY D216-280, thẳng bo trái - phải
-url = https://vinatools.com/keo-cat-ton-d216-sbsk/
+match = -140.0%%
+title = Kéo cắt tôn dày 1.0mm kiểu dáng cổ điển Bessey
+url = https://vinatools.com/keo-cat-ton-d-216-116/
 
 [www.vietnamairport.vn]
-match = -213.3%%
-title = Sơ đồ nhà ga - Tổng công ty cảng hàng không Việt ...
+match = -240.0%%
+title = Sơ đồ nhà ga - Tổng công ty cảng hàng không Việt Nam ...
 url = https://www.vietnamairport.vn/tansonnhatairport/tin-tuc/thong-tin-dich-vu/so-do-nha-ga-2
 
 [noibaiairport.vn]
