--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-07-29 18:17:12
+lastsearch = 2024-07-29 19:27:28
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -74,7 +74,7 @@ url = https://www.youtube.com/watch?v=D5B7MtNy_kM
 [books.google.com]
 match = -218.8%%
 title = Chức vụ cung ứng Lời Tập 25 Số 1 Kì 2: Nghiên cứu kết tinh ...
-url = https://books.google.com/books?id=FeBCEAAAQBAJ&pg=PT182&lpg=PT182&dq=chieu+lac+soc+16&source=bl&ots=aHacAR3nv9&sig=ACfU3U0IPAZllptJ2rqOhnAOlo5KInKV7A&hl=en&sa=X&ved=2ahUKEwiE58aFkMyHAxXvFVkFHVaTOp8Q6AF6BAglEAM
+url = https://books.google.com/books?id=FeBCEAAAQBAJ&pg=PT182&lpg=PT182&dq=chieu+lac+soc+16&source=bl&ots=aHacAR8fwf&sig=ACfU3U060uZfwP0I60HbkzeU3BfM68poGw&hl=en&sa=X&ved=2ahUKEwjH2Nnfn8yHAxVVHEQIHTO_GzYQ6AF6BAgaEAM
 
 [dantocmiennui.vn]
 match = -125.0%%
