--- a/images/man-re-trang-16/config.ini
+++ b/images/man-re-trang-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-16.html
 lastopen = 2024-06-09 23:51:34
 
 [search]
-lastsearch = 2024-07-29 16:22:56
+lastsearch = 2024-07-29 19:24:42
 
 [www.gov.uk]
 match = -200.0%%
@@ -32,9 +32,9 @@ title = Movie Information | Tickets | Showtimes |
 url = https://readingcinemas.com/
 
 [www.youtube.com]
-match = -33.3%%
-title = Summer Playlist | Week 6
-url = https://www.youtube.com/watch?v=seWXL4eX_qA
+match = -186.7%%
+title = Forgiveness & Pride | Trinity Online | July 28, 2024
+url = https://www.youtube.com/watch?v=Hoet9ccfBr8
 
 [vietjack.com]
 match = -106.7%%
