--- a/images/nem-sieu-nhe-9f-12/config.ini
+++ b/images/nem-sieu-nhe-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-12.html
 lastopen = 2024-06-10 01:22:00
 
 [search]
-lastsearch = 2024-07-29 18:15:47
+lastsearch = 2024-07-29 19:36:15
 
 [www.lazada.vn]
 match = -111.1%%
@@ -17,8 +17,8 @@ title = NEM-12
 url = https://www.coastpneumatics.com/product/NEM-12/
 
 [m.facebook.com]
-match = -200.0%%
-title = Thấy thương chị gái bán nem nướng thật thà hỏi gì cũng khai ...
+match = -177.8%%
+title = Thấy thương chị gái bán nem nướng thật thà hỏi gì cũng khai
 url = https://m.facebook.com/amthucduongpho247/videos/thấy-thương-chị-gái-bán-nem-nướng-thật-thà-hỏi-gì-cũng-khai-atdp/629711951714693/
 
 [thegioinem.com]
@@ -42,9 +42,9 @@ title = Quán nem nướng núp hẻm siêu ngon ở Gò Vấp, tuổi đời 12
 url = https://www.tiktok.com/@reviewcungphuocnhe/video/7249391511442296069
 
 [www.youtube.com]
-match = -133.3%%
-title = Cách làm NEM CÔNG CHẢ PHƯỢNG đón Tết cực dễ, cực ...
-url = https://www.youtube.com/watch?v=aDzQbk-eQvQ
+match = -144.4%%
+title = Chuẩn VỊ NEM NƯỚNG, Bí quyết làm Nem Nướng Viên dai ...
+url = https://www.youtube.com/watch?v=C58Hlp6UXfQ
 
 [www.kymdan.com]
 match = -16.7%%
@@ -57,9 +57,9 @@ title = NEM Furniture JSC (@nemfurniturejsc)
 url = https://www.instagram.com/nemfurniturejsc/?hl=en
 
 [www.diepxuan.com]
-match = -55.6%%
-title = Nệm siêu nhẹ 9F 12 - Chăn ga gối đệm Điệp Xuân
-url = https://www.diepxuan.com/nem-sieu-nhe-9f-12.html
+match = 11.1%%
+title = Điệp Xuân Nệm siêu nhẹ
+url = https://www.diepxuan.com/nem-sieu-nhe.html
 
 [nemphuoclong.vn]
 match = -83.3%%
