--- a/images/tham-giuong-ii-160x200/config.ini
+++ b/images/tham-giuong-ii-160x200/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/tham-giuong-ii-160x200.html
 lastopen = 2024-06-17 21:09:12
 
 [search]
-lastsearch = 2024-07-29 17:55:50
+lastsearch = 2024-07-29 19:25:01
 
 [www.diepxuan.com]
-match = 27.3%%
-title = Thảm giường Bode 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/tham-giuong-bode-160x200.html
+match = 40.9%%
+title = Thảm giường nỉ 160x200 - Điệp Xuân
+url = https://www.diepxuan.com/tham-giuong-ni-160x200.html
 
 [demxanh.com]
-match = -22.7%%
-title = Thảm trải giường lông cừu TLC 06 - Hà Nội
-url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-06.html
+match = 0.0%%
+title = Thảm trải giường cao su non màu ghi
+url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-ghi.html
 
 [www.lazada.vn]
 match = -113.6%%
@@ -37,9 +37,9 @@ title = Thảm Sofa Biên Hòa
 url = https://decoviet.vn/tham-sofa-bien-hoa/
 
 [www.thamvintage.vn]
-match = -25.0%%
-title = Thảm Vintage
-url = https://www.thamvintage.vn/
+match = 12.5%%
+title = Thảm chân giường
+url = https://www.thamvintage.vn/collections/tham-chan-giuong
 
 [cafeland.vn]
 match = -72.7%%
@@ -92,9 +92,9 @@ title = Thảm phòng khách - Thảm trải sàn chất lượng, giá tốt
 url = https://comehome.com.vn/phu-kien/san-pham-det-may/tham.html
 
 [flexhouse.vn]
-match = -40.9%%
-title = Thảm trải sàn phòng ngủ chính hãng, giá tốt
-url = https://flexhouse.vn/tham-trai-san-phong-ngu
+match = -9.1%%
+title = Thảm trải sàn chính hãng, giá tốt
+url = https://flexhouse.vn/tham-lot-san
 
 [decosy.com]
 match = -166.7%%
